kubernetes/apps/collaboration/firefox-sync/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox-sync
  labels:
    app.kubernetes.io/name: firefox-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: firefox-sync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: firefox-sync
    spec:
      containers:
        - name: syncstorage-rs
          image: ghcr.io/mozilla-services/syncstorage-rs/syncstorage-rs-postgres:ab47abaaed@sha256:af1c2ae27d8a1afaf761c7000c30b821e07d78a5b5d8da800f82b6c6cb893fc0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /__heartbeat__
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /__lbheartbeat__
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
