kubernetes/apps/collaboration/firefox-sync/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefox-sync
  labels:
    app.kubernetes.io/name: firefox-sync
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: firefox-sync
  ports:
    - name: http
      port: 8000
      targetPort: http
