kubernetes/apps/collaboration/firefox-sync/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefox-sync
spec:
  hostnames: ["firefox-sync.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: firefox-sync
          port: 8000
